--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       
       <a class="index-excerpt index-excerpt__noimg" href="/blender/model/attr/vertex-groups/" target="_self">
         <div>
-          简介顶点组主要被用来标记属于网格物体或者 晶格 的顶点。想一下椅子的腿和门的铰链，或者一个角色的手、胳膊、四肢、头、脚等。此外，还可以给顶点组里的顶点指定不同的权重值 (范围介于 [ 0.0, 1.0 ] )。因此，顶点组有时候也被称作为 权重组 用法顶点组常用于骨架。但是在 Blender 中也可以用在很多其他方面，比如说：  蒙皮 形态键 修改器 粒子生成器 物理仿真  顶点组面板编辑顶点组指
+          简介顶点组主要被用来标记属于网格物体或者 晶格 的顶点。想一下椅子的腿和门的铰链，或者一个角色的手、胳膊、四肢、头、脚等。此外，还可以给顶点组里的顶点指定不同的权重值 (范围介于 [ 0.0, 1.0 ] )。因此，顶点组有时候也被称作为 权重组 用法顶点组常用于骨架。但是在 Blender 中也可以用在很多其他方面，比如说：  蒙皮 形态键 修改器 粒子生成器 物理仿真  顶点组面板(对象数据选
         </div>
       </a>
 
