deploy: d4fad5247c60dd72705e66b386431feca9b2673b

--- a/404.html
+++ b/404.html
@@ -196,11 +196,7 @@
      style="no-repeat center center; background-size: cover;">
   <div class="full-bg-img">
     <div id="particles-js"></div>
-    <div id='banner-canvas'>
-         <div class="wrapper">
-            <div class="flower"></div>
-        </div>
-    </div>
+    <canvas id="banner-canvas"></canvas>
     <div class="mask flex-center" style="background-color: rgba(0, 0, 0, 0.7)">
       <div class="banner-text text-center fade-in-up">
         <div class="h2">
@@ -216,7 +212,8 @@
     </div>
   </div>
 </div>
-<script src='/js/banner.js'></script>
+<script src='/js/banner.js' async></script>
+<script src='/js/banner2.js' async></script>
 
 </div>
 
