deploy: 2a615be9656c752813aad2c734f7e3768f1442f2

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       
       <a class="index-excerpt index-excerpt__noimg" href="/nexus/%E6%97%A0%E6%B3%95%E4%BD%BF%E7%94%A8group%E9%97%AE%E9%A2%98/" target="_self">
         <div>
-          npm login 无法登录npm config设置了registry也无效，需要直接在命令后添加–registry npm intall 无法安装依赖，提示401 确认配置npm Bearer Token Realm，使其处于active 确认group的地址完全一致，包含最后一个 ‘&#x2F;‘
+          npm login 无法登录npm config设置了registry也无效，需要直接在命令后添加–registry npm intall 无法安装依赖，提示401 确认配置npm Bearer Token Realm，使其处于active 确认group的地址完全一致，包含最后一个 ‘&#x2F;‘ 删除npm鉴权缓存，重新登录
         </div>
       </a>
 
